--- a/report/citation.bib
+++ b/report/citation.bib
@@ -164,10 +164,13 @@
   organization={IEEE}
 }
 
-@article{sainath2015convolutional,
-  title={Convolutional neural networks for small-footprint keyword spotting},
-  author={Sainath, Tara and Parada, Carolina},
-  year={2015}
+@inproceedings{chen2014small,
+  title={Small-footprint keyword spotting using deep neural networks},
+  author={Chen, Guoguo and Parada, Carolina and Heigold, Georg},
+  booktitle={2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={4087--4091},
+  year={2014},
+  organization={IEEE}
 }
 
 @misc{speechcommandsdataset,
